Changelog
=========

1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2015-05-05)
------------------

- Initial implementation
  [maethu, jone]