@@ -4,6 +4,7 @@
 
     <adapter factory=".base.PlainFieldExtractor" />
 
+    <adapter for="* * plone.app.textfield.interfaces.IRichText" factory=".richtext.RichTextExtractor" />
     <adapter for="* * plone.namedfile.interfaces.INamedField" factory=".namedfile.NamedFileExtractor" />
     <adapter for="* * zope.schema.interfaces.IDate" factory=".datetime.DatetimeExtrator" />
     <adapter for="* * zope.schema.interfaces.IDatetime" factory=".datetime.DatetimeExtrator" />
