@@ -39,6 +39,11 @@
   "ftw.jsondump.tests.dxitem.IDXItemSchema.image_field:mimetype": "image/gif",
   "ftw.jsondump.tests.dxitem.IDXItemSchema.image_field:size": 42,
   "ftw.jsondump.tests.dxitem.IDXItemSchema.list_field": ["foo", "bar", "baz"],
+  "ftw.jsondump.tests.dxitem.IDXItemSchema.richtext_field": null,
+  "ftw.jsondump.tests.dxitem.IDXItemSchema.richtext_field": "<p>Hello World.</p>",
+  "ftw.jsondump.tests.dxitem.IDXItemSchema.richtext_field:encoding": "utf-8",
+  "ftw.jsondump.tests.dxitem.IDXItemSchema.richtext_field:mimeType": "text/html",
+  "ftw.jsondump.tests.dxitem.IDXItemSchema.richtext_field:outputMimeType": "text/x-html-safe",
   "ftw.jsondump.tests.dxitem.IDXItemSchema.text_field": "A great text.",
   "ftw.jsondump.tests.dxitem.IDXItemSchema.time_field": "23:58:59.000001",
   "ftw.jsondump.tests.dxitem.IDXItemSchema.timedelta_field": 172800.001007,
