@@ -4,7 +4,8 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Dexterity: support exporting RichTextValue objects.
+  [jone]
 
 
 1.0.0 (2015-05-05)
